2007-04-18  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: add the info file to the debian control.
	Next step: validate the Shlibs field in a .deb.  :)

2007-04-17  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Standardize terminology as selfupdate "method".

2007-04-13  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: Parse a greater variety of Version strings from the 
	X server.

2007-04-13  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Standardize terminology as selfupdate "method";
	add selfupdate --list-methods flag.

2007-04-12  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, SelfUpdate.pm: 'fink plugins' does SU->list_plugins,
	which lists the status of all SU::* method classes.
	* SelfUpdate/*: add $VERSION package variable.
	* SelfUpdate/point.pm: check_system fails if different method is active

2007-04-10  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/*: merge from selfupdate_classes branch

2007-04-10  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, SelfUpdate.pm: Engine::cmd_selfupdate now passes off
	to new SelfUpdate::cmd_selfupdate, which implements getopt
	interface for 'fink selfupdate' to control all selfupdate actions.
	* Engine.pm: all other cmd_selfupdate* now wrappers around
	cmd_selfupdate, simulating appropriate cmdline flags

2007-04-10  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, Engine.pm, FinkVersion.pm.in, SelfUpdate.pm: merge
	from selfupdate_classes branch

2007-04-04  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: Use lftpget if available and appropriate

2007-03-22  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Use prompt_selection for menu of choices

2007-03-19  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Display actual Distribution string in 'fink -V'

2007-03-19  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Fix error msg if using new_with_properties

2007-03-17  Dave Morrison  <drm@finkproject.org>
